# property

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  property.h
tests/: CMakeLists.txt  main.cc
